# sudoku-verifier

./: .gitignore  README.md  env-setup.md  howto.md
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
