[package]
version = "0.1.0"
name = "sudoku-script"
edition = "2021"
default-run = "sudoku"

[[bin]]
name = "sudoku"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
sudoku-lib = { path = "../lib" }
dotenv = "0.15.0"
axum = "0.7.2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
bincode = "1.3.3"
chrono = "0.4.40"

[build-dependencies]
sp1-build = "4.0.0"
